Update hero section content order
Rearranged hero section content in index.html.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="hero-grid">
                 <div class="hero-content">
                     <span class="hero-badge">Trusted IT Solutions Provider</span>
-                    <h2 class="hero-title">"Empower your business with cutting-edge IT solutions from MANSA TECHNOLOGY PVT. LTD.,your trusted partner for corporate IT services since 2021."</h2>
-                    <p class="hero-description">From CCTV installations to computer services, we provide comprehensive IT solutions across Kathmandu valley. Quality products, expert services, and reliable support.</p>
+                    <h2 class="hero-title">MANSA TECHNOLOGY PVT. LTD. </h2>
+                    <p class="hero-description">"Empower your business with cutting-edge IT solutions from MANSA TECHNOLOGY PVT. LTD.,your trusted partner for corporate IT services since 2021."</p>
                     <div class="hero-buttons">
                         <button class="btn-primary btn-lg" onclick="scrollToSection('contact')">Get Started</button>
                         <button class="btn-outline btn-lg" onclick="scrollToSection('products')">View Products</button>
