Update logo title to include 'Pvt. Ltd.'
update on home

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="logo-section">
                     <img src="https://customer-assets.emergentagent.com/job_mansa-electronics/artifacts/6mdvtiyo_newlogo.png" alt="Mansa Technology" class="logo-img">
                     <div class="logo-text">
-                        <h1 class="logo-title">Mansa Technology</h1>
+                        <h1 class="logo-title">Mansa Technology Pvt. Ltd.</h1>
                         <p class="logo-subtitle">IT Solutions & Services</p>
                     </div>
                 </div>
